# how-to-multi-backend-rendering

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
android/: settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/multibackend/: DemoActivity.java
android/app/src/main/res/values/: strings.xml
docs/: 01-call-stack-maps.md  02-architecture.md  03-backend-patterns.md  04-python-pseudocode.md  05-tutorial-single-to-multi-backend.md  06-platform-roadmap.md  08-web-emscripten.md  09-android-ios-setup.md  10-reference-repos.md  pseudocode_backend_demo.py
include/app/: DemoScene.hpp
include/renderer/: IRenderer.hpp  RendererFactory.hpp  SDLRenderer2D.hpp
scripts/android/: build_apk.sh  build_native.sh  create_avd.sh  dev_cycle.sh  env.sh  install_apk.sh  logcat.sh  run_app.sh  setup_sdk.sh  start_emulator.sh
src/: main.cpp
src/app/: DemoScene.cpp
src/renderer/: RendererFactory.cpp  SDLRenderer2D.cpp
